radio value added

--- a/Responsive Web Design/Survey Form/index.html
+++ b/Responsive Web Design/Survey Form/index.html
@@ -40,9 +40,9 @@
 
         <div class="input-group">
             <p>Which animals do you like more?</p>
-            <input type="radio" name="animal" id="cats">
+            <input type="radio" name="animal" id="cats" value="cats">
             <label for="cats">Cats</label>
-            <input type="radio" name="animal" id="dogs">
+            <input type="radio" name="animal" id="dogs" value="dogs">
             <label for="dogs">Dogs</label>
         </div>
 
