technical documentation cloned

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                     <span class="text">Tribute Page</span></a>
                 <div class="clearfix"></div>
             </li>
+            <li><a href="./Technical Documentation/index.html" title="Technical Documentation">
+                    <span class="text">Technical Documentation</span></a>
+                <div class="clearfix"></div>
+            </li>
 
         </ul>
     </main>
